--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "2.0.47",
+    "yiisoft/yii2": "~2.0.47",
     "yiisoft/yii2-swiftmailer": "~2.1.0"
   },
   "autoload": {
